Remove unused local variables and use `Stream.toList()` where possible